# action

./: .gitignore  CMakeLists.txt  README.md
include/: Includes.hpp  action_core.hpp  action_util.hpp
io/: ActionFile
src/: CMakeLists.txt  main.cpp
